Add ssh-key passphrase

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -62,6 +62,7 @@ jobs:
           host: ${{ secrets.ENDPOINT }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY_OF_NETCUP }}
+          passphrase: ${{ secrets.SSH_KEY_PASSPHRASE }}
           script: |
             sudo docker login https://ghcr.io -u zkdev --password ${{ secrets.ZK_PACKAGE }}
             sudo docker stop openmonitor-monitor-api
