Use ssh from org

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -61,8 +61,8 @@ jobs:
         with:
           host: ${{ secrets.ENDPOINT }}
           username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_KEY_OF_NETCUP }}
-          passphrase: ${{ secrets.SSH_KEY_PASSPHRASE }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_KEY_PASSWD }}
           script: |
             sudo docker login https://ghcr.io -u zkdev --password ${{ secrets.ZK_PACKAGE }}
             sudo docker stop openmonitor-monitor-api
